# jpamb

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  OPCODES.md  README.md  build.nix  feedback.yaml  flake.nix  my_analyzer.py  out.expected  pyproject.toml  requirements-extra.txt  run.py  syntactic_output.json
.github/workflows/: docker.yml  lint.yml  main.yml  test.yml
decompiled/jpamb/: Runtime.json
decompiled/jpamb/cases/: Arrays.json  Calls.json  Loops.json  Simple.json  Tricky.json
decompiled/jpamb/utils/: CaseContent$ResultType.json  CaseContent.json  InputParser$ParseError.json  InputParser.json  Tag$TagType.json
jpamb/: __init__.py  cli.py  model.py  stats.py
jpamb/jvm/: base.py  opcode.py
lib/: .gitignore  .python-version  pyproject.toml
lib/jpamb/: __init__.py  cli.py  jvm.py  logger.py  model.py  suite.py  timer.c  timer.cp312-win_amd64.pyd  utils.py
lib/jpamb/jvm/: __init__.py  base.py  bytecode.py  opcode.py
lib/tests/: test_jvm.py  test_jvm_bytecode.py
project/: abstract_interpreter.py  abstraction.py  chat_wisdom.md  chat_wisdom.py  code_rewriter.py  debloat_config.py  debloat_orchestrator.py  dynamic_analysis.py  flow.md  interpreter.py  my_analyzer.py  novel_domains.py  rewriter_with_claude.py  syntactic_analysis.py  syntactic_analyzer.py  syntactic_helper.py
project/abstractions/: abstraction.py  interval.py  interval_double.py  machine_word.py  novel_domains.py  polyhedral.py  signset.py  string_set.py
project/test/: test_abstraction.py  test_abstraction_doubledomain.py  test_abstraction_interval.py  test_abstraction_interval_extensive.py  test_abstraction_machine_word.py  test_abstraction_machineworddomain.py  test_abstraction_polyhedral.py  test_abstraction_polyhedral_domain.py  test_abstraction_signset.py  test_abstraction_string.py  test_abstraction_string_domain.py  test_concrete_cast.py  test_i2s_cast.py
scripts/: build-docker.sh
solutions/: apriori.py  bytecoder.py  cheater.py  dynamic_analysis.py  interpreter.py  my_analyzer.py  syntactic_helper.py  syntaxer.py
src/main/java/jpamb/: Runtime.java
src/main/java/jpamb/cases/: Calls.java  Extended.java  Loops.java  Simple.java  Tricky.java
src/test/java/jpamb/: RuntimeTest.java
stats/: cases.txt  distribution.csv
test/: apriori.txt  bytecoder.txt  cheater.txt  syntaxer.txt  test.sh  test_cli.py  test_cli_reliability.py  test_integration.py  test_jvm.py  test_jvm_bytecode.py  test_model.py  test_scoring.py  test_solutions.py
test/expected/: apriori.txt  bytecoder.txt  cheater.txt  interpreter.txt  my_analyzer.txt  syntaxer.txt
