[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
  {name = "jpamb.timer", sources = ["jpamb/timer.c"]}
]

[tool.setuptools.packages.find]
include = ["jpamb", "jpamb.jvm"]  


[project]
name = "jpamb"
version = "0.3.0"
dependencies = [
  "PyYAML==6.0.2",
  "click==8.1.7",
  "hypothesis>=6.139.2",
  "loguru==0.7.2",
  "tree-sitter-java==0.23.5",
  "tree-sitter==0.25.1",
  "z3-solver==4.13.3.0",
]
authors = [
  { name = "Christian Gram Kalhauge", email = "chrg@dtu.dk" }
]
description = "Utilities for working with the jpamb benchmark suite"
requires-python = ">=3.13"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
stats = [
  "numpy==2.1.1",
  "pandas==2.2.2",
  "plotly==5.24.0",
]

[project.scripts]
jpamb = "jpamb.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.1.0",  # Added Ruff to dev dependencies
]

# Ruff configuration starts here
[tool.ruff]
target-version = "py313"  # Matching your requires-python
line-length = 88

# Enable rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]

# Ignore specific rules if needed
ignore = [
    "E501",  # line too long (handled by formatter)
]

# Exclude files/directories
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "venv",
  "jpamb",
  "solutions/syntaxer.py",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["jpamb"]  # Your package name
force-single-line = false

[tool.pytest.ini_options]
markers = [
  "slow: mark test as slow"
]

