[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
  {name = "jpamb.timer", sources = ["jpamb/timer.c"]}
]

[tool.setuptools.packages.find]
include = ["jpamb", "jpamb.jvm"]  


[project]
name = "jpamb"
version = "0.3.0"
dependencies = [
  "PyYAML==6.0.2",
  "click==8.1.7",
  "hypothesis>=6.139.2",
  "loguru==0.7.2",
  "matplotlib>=3.10.6",
  "plotly>=5.24.0",
  "tree-sitter-java==0.23.5",
  "tree-sitter==0.25.1",
  "z3-solver==4.13.3.0",
]
authors = [
  { name = "Christian Gram Kalhauge", email = "chrg@dtu.dk" }
]
description = "Utilities for working with the jpamb benchmark suite"
requires-python = ">=3.13"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
stats = [
  "numpy==2.1.1",
  "pandas==2.2.2",
  "plotly==5.24.0",
]

[project.scripts]
jpamb = "jpamb.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.1.0", # Added Ruff to dev dependencies
]

# Ruff configuration starts here
[tool.ruff]
target-version = "py313"  # Matching your requires-python
line-length = 88


# Exclude files/directories
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "venv",
  # Externally managed
  "jpamb/",
  "solutions/",
  "test/",
]

# Enable rule sets
[tool.ruff.lint]
select = [
  "ALL"
]

# Ignore specific rules if needed
ignore = [
  # == Missing docstring
  "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
  # --
  "D203",     # 1 blank line required before class docstring
  "D212",     # Multi-line docstring summary should start at the first line
  "EM",       # errmsg formatting
  "ERA001",   # Commented-out code
  "FIX",      # Fix notes found
  "G004",     # Logging statement uses f-strings
  "PLW1641",  # Missing __hash__ method
  "S101",     # Use of assert detected
  "S311",     # Use of weak cryptographic hash function
  "T201",     # print statement found
  "TD003",    # Missing issue link in todo
  "TRY003",   # Long exception message
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["jpamb"]  # Your package name
force-single-line = false

[tool.pytest.ini_options]
markers = [
  "slow: mark test as slow"
]
