[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
  {name = "jpamb.timer", sources = ["jpamb/timer.c"]}
]

[tool.setuptools.packages.find]
include = ["jpamb"]  


[project]
name = "jpamb"
version = "0.2.0"
dependencies = [
  "PyYAML==6.0.2",
  "click==8.1.7",
  "loguru==0.7.2",
  "tree-sitter-java==0.23.1",
  "tree-sitter==0.23.0",
  "z3-solver==4.13.3.0",
]
authors = [
  { name = "Christian Gram Kalhauge", email = "chrg@dtu.dk" }
]
description = "Utilities for working with the jpamb benchmark suite"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
stats = [
  "numpy==2.1.1",
  "pandas==2.2.2",
  "plotly==5.24.0",
]
test = [
  "pytest==8.3.4",
]

[project.scripts]
jpamb = "jpamb.cli:cli"
jpamb_stats = "jpamb.stats:stats"
